--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "moment": "^2.24.0",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
